Add unit and integration tests for some of the base features

--- a/tests/unit-tests/ride-requests/index.html
+++ b/tests/unit-tests/ride-requests/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ride Request API Tests</title>
+    <title>Ride Request API Unit Tests</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Ride Request API Tests</h1>
+      <h1>Ride Request API Unit Tests</h1>
+      <p class="test-type">Using stubbed API calls with mock data</p>
       <div id="testResults" class="test-results">
         <p>Running tests...</p>
       </div>
