--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <i class="fas fa-bars"></i>
             </button>
             <nav class="main-nav">
-              <a href="#" class="nav-item"
+              <a href="#" class="nav-item" id="login-button"
                 ><i class="fas fa-sign-in-alt"></i> Login</a
               >
               <a href="#" class="nav-item"
@@ -102,6 +102,34 @@
         <div id="status-message" class="status-message"></div>
       </main>
     </div>
+
+    <!-- Login Modal -->
+    <div id="login-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2><i class="fas fa-sign-in-alt"></i> Login to WingMan</h2>
+          <button class="close-modal"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="modal-body">
+          <p>Choose your login method:</p>
+          <button class="oauth-button google-login">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+              alt="Google Logo"
+            />
+            Continue with Google
+          </button>
+          <div class="divider">
+            <span>or</span>
+          </div>
+          <button class="oauth-button guest-login">
+            <i class="fas fa-user"></i>
+            Continue as Guest
+          </button>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
