--- a/tests/integration-tests/ride-requests/index.html
+++ b/tests/integration-tests/ride-requests/index.html
@@ -28,6 +28,7 @@
         <p>Running tests...</p>
       </div>
     </div>
+    <script src="../../test-tracking.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
