--- a/tests/unit-tests/ride-requests/index.html
+++ b/tests/unit-tests/ride-requests/index.html
@@ -14,6 +14,7 @@
         <p>Running tests...</p>
       </div>
     </div>
+    <script src="../../test-tracking.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
