Fix pricing format

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="ride-details">
                 <h3>Comfort</h3>
                 <p>More space, extra comfort</p>
-                <span class="price">From $18</span>
+                <span class="price">+$5</span>
               </div>
             </div>
             <div class="ride-card" data-ride="premium">
@@ -91,7 +91,7 @@
               <div class="ride-details">
                 <h3>Premium</h3>
                 <p>Luxury vehicles, top service</p>
-                <span class="price">From $25</span>
+                <span class="price">+$10</span>
               </div>
             </div>
           </div>
