--- a/accounts.html
+++ b/accounts.html
@@ -33,6 +33,20 @@
         </div>
 
         <div class="ride-options">
+          <h2>Saved Addresses</h2>
+          <div class="location-inputs">
+            <div class="input-group">
+              <i class="fas fa-home"></i>
+              <input type="text" id="homeAddress" placeholder="Home Address" />
+            </div>
+            <div class="input-group">
+              <i class="fas fa-building"></i>
+              <input type="text" id="workAddress" placeholder="Work Address" />
+            </div>
+          </div>
+        </div>
+
+        <div class="ride-options">
           <h2>Payment Methods</h2>
           <div class="ride-cards">
             <div class="ride-card" data-payment="card">
