--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="#" class="nav-item"
                 ><i class="fas fa-user-plus"></i> Sign Up</a
               >
-              <a href="#" class="nav-item"
+              <a href="help.html" class="nav-item"
                 ><i class="fas fa-question-circle"></i> Help</a
               >
               <a href="accounts.html" class="nav-item"
