hamburger icon sillyness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WingMan - Your Ride Companion</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -18,22 +18,22 @@
             <h1><i class="fas fa-car"></i> WingMan</h1>
           </div>
           <div class="menu-container">
-            <button class="menu-toggle">
+            <button class="menu-toggle" aria-label="Toggle navigation menu">
               <i class="fas fa-bars"></i>
             </button>
             <nav class="main-nav">
-              <a href="#" class="nav-item" id="login-button"
-                ><i class="fas fa-sign-in-alt"></i> Login</a
-              >
-              <a href="#" class="nav-item"
-                ><i class="fas fa-user-plus"></i> Sign Up</a
-              >
-              <a href="help.html" class="nav-item"
-                ><i class="fas fa-question-circle"></i> Help</a
-              >
-              <a href="accounts.html" class="nav-item"
-                ><i class="fas fa-user-circle"></i> Account</a
-              >
+              <a href="#" class="nav-item" id="login-button">
+                <i class="fas fa-sign-in-alt"></i> Login
+              </a>
+              <a href="#" class="nav-item">
+                <i class="fas fa-user-plus"></i> Sign Up
+              </a>
+              <a href="help.html" class="nav-item">
+                <i class="fas fa-question-circle"></i> Help
+              </a>
+              <a href="accounts.html" class="nav-item">
+                <i class="fas fa-user-circle"></i> Account
+              </a>
             </nav>
           </div>
         </div>
